mis conoc terminado

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div class="div1">
     <h2>Mis Conocimientos</h2>
     <br>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non quis iure totam mollitia exercitationem aperiam laboriosam, earum, maxime odio ipsum similique dolorum architecto inventore! Beatae dolorum sed aperiam in quidem.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non quis iure totam mollitia exercitationem aperiam laboriosam, earum, maxime odio ipsum similique.</p>
 </div>
 <div class="div2-s2">
     <div class="caja-s2"><img src="imagenes/html5.svg" class="img-s2"><h2>HTML 5</h2></div>
