Estructura del formulario terminado

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>El Portfolio de Lilen</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="keywords" content="lilen, chu, portfolio, portafolio, desarrolladora, desarrollo web">
+        <meta name="keywords" content="lilen, chu, portfolio, portafolio, desarrolladora, desarrollo web, chu-l">
         <meta name="description" content="Portfolio personal de Lilen Chu.">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link href="estilo.css" rel="stylesheet">
@@ -90,22 +90,47 @@
         </section>
 <!--Sección 5-->
         <section id="contacto">
-
-<div class="div1-s5">
-
-<div>
-<h2>Contactame</h2>
-</div>
-<div>
-<h2>Escribime</h2>
-<form>
-    
-</form>
-</div>
-
-</div>
-
+            <div class="div1-s5">
+                <div class="caja1-s5">
+                    <h2 class="tit-s5">Contactame</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde perspiciatis voluptas eum exercitationem maxime reiciendis adipisci, error odit? Esse velit enim, ducimus deleniti dolor libero architecto odio illum tempora itaque.</p>
+                    <nav>
+                    <ul>
+                        <li><a href="#hola">@_Lilen_</a></li>
+                        <li><a href="#hola">Chu-l</a></li>
+                        <li><a href="#hola">l.i.l.e.n</a></li>
+                        <li><a href="#hola">lilen.chu@hotmail.com</a></li>
+                    </ul>
+                    </nav>
+                </div>
+                <div class="caja2-s5">
+                    <h2 class="tit-s5">Escribime</h2>
+                    <form action="mailto:lilen.chu@hotmail.com" method="POST" enctype="text/plain">
+                        <p>
+                            <label for="nombre">Nombre<span class="obligatorio">*</span></label>
+                            <input type="text" name="nombre" id="nombre" required="required" placeholder="Escribe tu nombre">
+                        </p>
+                        <p>
+                            <label for="apellido">Apellido<span class="obligatorio">*</span></label>
+                            <input type="text" name="apellido" id="apellido" required="required" placeholder="Escribe tu apellido">
+                        </p>
+                        <p>
+                            <label for="email">Email<span class="obligatorio">*</span></label>
+                            <input type="email" name="email" id="email" required="required" placeholder="Escribe tu Email">
+                        </p>
+                        <p>
+                            <label for="mensaje">Mensaje<span class="obligatorio">*</span></label>
+                            <textarea type="" name="mensaje" id="mensaje" required="required" placeholder="Escriba un mensaje aquí" size="58"></textarea>
+                        </p>
+                        <button type="submit" name="enviar_formulario" id="enviar"><p>Enviar</p></button>
+                        <p class="aviso">
+                            <span class="obligatorio"> * </span>los campos son obligatorios.
+                        </p>					
+                    </form>
+                </div>
+            </div>
         </section>
+
     </main>
 <!--Fin del Main-->
 
