--- a/index.html
+++ b/index.html
@@ -143,7 +143,16 @@
 <a href="#conocimientos">CONOCIMIENTOS</a>
 <a href="#proyectos">PROYECTOS</a>
 <a href="#contacto">CONTACTO</a>   
-<p>Hecho con <img src="imagenes/corazon.gif"> por Chull</p>
+
+<ul>
+    <li><a href="https://twitter.com/_Lilen_" target="_blank"><i class="fab fa-twitter"></i></a></li>
+    <li><a href="https://github.com/Chu-l" target="_blank"><i class="fab fa-github-alt"></i></a></li>
+    <li><a href="https://www.linkedin.com/in/chu-l/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+    <li><a href="#"><i class="fas fa-envelope"></i></a></li>
+    
+</ul>
+
+<p>Hecho con <img src="imagenes/corazon.png" class="corazon"> por Chull</p>
     </footer>
 <!--Fin del Footer-->
 
