--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <!--Sección 3-->
         <section class="s3">
-<img src="imagenes/comillas3.png">
+<img src="imagenes/comillas3.png" class="comillas">
 <p>Quiero compartir con ustedes el secreto que me ha llevado a alcanzar todas mis metas: mi fuerza reside únicamente en mi tenacidad.</p>
 <p class="louis">Louis Pasteur</p>
         </section>
