Contactame y Escribeme terminados

--- a/index.html
+++ b/index.html
@@ -90,69 +90,71 @@
 
         </section>
 <!--Sección 5-->
-        <section id="contacto">
-            <div class="div1-s5">
-                <div class="caja1-s5">
-                    <h2 class="tit-s5">Contactame</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde perspiciatis voluptas eum exercitationem maxime reiciendis adipisci, error odit? Esse velit enim, ducimus deleniti dolor libero architecto odio illum tempora itaque.</p>
-                    <nav>
-                    <ul>
-                        <li><a href="#hola">@_Lilen_</a></li>
-                        <li><a href="#hola">Chu-l</a></li>
-                        <li><a href="#hola">l.i.l.e.n</a></li>
-                        <li><a href="#hola">lilen.chu@hotmail.com</a></li>
-                    </ul>
-                    </nav>
-                </div>
-                <div class="caja2-s5">
-                    <h2 class="tit-s5">Escribime</h2>
-                    <form action="mailto:lilen.chu@hotmail.com" method="POST" enctype="text/plain">
-                        <div class="ayn">
-                            <p class="p-nom">
-                            <label for="nombre">Nombre <span class="obligatorio">*</span></label>
-                            <input type="text" name="nombre" id="nombre" required="required" placeholder="Escribe tu nombre">
-                            </p>
-                            <p class="p-ape">
-                            <label for="apellido">Apellido <span class="obligatorio">*</span></label>
-                            <input type="text" name="apellido" id="apellido" required="required" placeholder="Escribe tu apellido">
-                            </p>
-                        </div>
-                        <p>
-                            <label for="email">Email <span class="obligatorio">*</span></label>
-                            <input type="email" name="email" id="email" required="required" placeholder="Escribe tu Email">
-                        </p>
-                        <p>
-                            <label for="mensaje">Mensaje <span class="obligatorio">*</span></label>
-                            <textarea type="" name="mensaje" id="mensaje" required="required" placeholder="Escriba un mensaje aquí" size="58"></textarea>
-                        </p>
-                        <button type="submit" name="enviar_formulario" id="enviar"><p>Enviar</p></button>
-                        <p class="aviso">
-                            <span class="obligatorio"> * </span>los campos son obligatorios.
-                        </p>					
-                    </form>
-                </div>
+    <section id="contacto">
+        <div class="div1-s5">
+            <div class="caja1-s5">
+                <h2 class="tit-s5">Contactame</h2>
+                <p>Encantada de conocerte! No dudes en contactarme por cualquiera de estos medios. Estoy disponible para proyectos freelance y trabajos fulltime.</p>
+                <div class="divs"><a href="#"><i class="fab fa-twitter"></i>@_Lilen_</a></div>
+                <div class="divs"><a href="#"><i class="fab fa-github-alt"></i>Chu-l</a></div>
+                <div class="divs"><a href="#"><i class="fab fa-linkedin-in"></i>l.i.l.e.n</a></div>
+                <div class="divs"><a href="#"><i class="fas fa-envelope"></i>lilen.chu@hotmail.com</a></div>
             </div>
-        </section>
+            <div class="caja2-s5">
+
+                <h2 class="tit-s5">Escribime</h2>
+
+                <form action="mailto:lilen.chu@hotmail.com" method="POST" enctype="text/plain">
+
+                    <div class="ayn">
+                        <p class="p-nom">
+                            <label for="nombre">Nombre <span class="obligatorio">*</span></label>
+                            <input type="text" name="nombre" id="nombre" required="required" placeholder="  Escribe tu nombre">
+                        </p>
+                        <p class="p-ape">
+                            <label for="apellido">Apellido <span class="obligatorio">*</span></label>
+                            <input type="text" name="apellido" id="apellido" required="required" placeholder="  Escribe tu apellido">
+                        </p>
+                    </div>
+
+                    <p>
+                        <label for="email">Email <span class="obligatorio">*</span></label>
+                        <input type="email" name="email" id="email" required="required" placeholder="  Escribe tu Email">
+                    </p>
+
+                    <p>
+                        <label for="mensaje">Mensaje <span class="obligatorio">*</span></label>
+                        <textarea type="" name="mensaje" id="mensaje" required="required" placeholder="Escriba un mensaje aquí" size="58"></textarea>
+                    </p>
+
+                    <p><input type="submit" name="enviar" value="Enviar" class="enviar"></p>
+                    
+                    <p class="aviso"><span class="obligatorio"> * </span>los campos son obligatorios.</p>	
+
+                </form>
+
+            </div>
+        </div>
+    </section>
 
     </main>
 <!--Fin del Main-->
 
 <!--Principio del Footer-->
     <footer>
-<a href="#hola">HOLA</a>
-<a href="#conocimientos">CONOCIMIENTOS</a>
-<a href="#proyectos">PROYECTOS</a>
-<a href="#contacto">CONTACTO</a>   
+        <a href="#hola">HOLA</a>
+        <a href="#conocimientos">CONOCIMIENTOS</a>
+        <a href="#proyectos">PROYECTOS</a>
+        <a href="#contacto">CONTACTO</a>   
 
-<ul>
-    <li><a href="https://twitter.com/_Lilen_" target="_blank"><i class="fab fa-twitter"></i></a></li>
-    <li><a href="https://github.com/Chu-l" target="_blank"><i class="fab fa-github-alt"></i></a></li>
-    <li><a href="https://www.linkedin.com/in/chu-l/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-    <li><a href="#"><i class="fas fa-envelope"></i></a></li>
-    
-</ul>
+        <ul>
+            <li><a href="https://twitter.com/_Lilen_" target="_blank"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="https://github.com/Chu-l" target="_blank"><i class="fab fa-github-alt"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/chu-l/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+            <li><a href="#"><i class="fas fa-envelope"></i></a></li>
+        </ul>
 
-<p>Hecho con <img src="imagenes/corazon.png" class="corazon"> por Chull</p>
+        <p>Hecho con <img src="imagenes/corazon.png" class="corazon"> por Chull</p>
     </footer>
 <!--Fin del Footer-->
 
