mis conocimientos terminado

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 <!--Sección 2-->
         <section id="conocimientos">
 <div class="div1">
-    <h2>Mis Conocimientos</h2>
+    <h2>Mis conocimientos</h2>
     <br>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non quis iure totam mollitia exercitationem aperiam laboriosam, earum, maxime odio ipsum similique.</p>
+    <p>Tengo conocimientos en desarrollo web frontend pero sigo formándome continuamente. También estoy aprendiendo sobre diseño, Photoshop, Adobe Illustrator, Pyxel Edit y otras herramientas.</p>
 </div>
 <div class="div2-s2">
     <div class="caja-s2"><img src="imagenes/html5.svg" class="img-s2"><h2>HTML 5</h2></div>
@@ -95,9 +95,9 @@
             <div class="caja1-s5">
                 <h2 class="tit-s5">Contactame</h2>
                 <p>Encantada de conocerte! No dudes en contactarme por cualquiera de estos medios. Estoy disponible para proyectos freelance y trabajos fulltime.</p>
-                <div class="divs"><a href="#"><i class="fab fa-twitter"></i>@_Lilen_</a></div>
-                <div class="divs"><a href="#"><i class="fab fa-github-alt"></i>Chu-l</a></div>
-                <div class="divs"><a href="#"><i class="fab fa-linkedin-in"></i>l.i.l.e.n</a></div>
+                <div class="divs"><a href="https://twitter.com/_Lilen_" target="_blank"><i class="fab fa-twitter"></i>@_Lilen_</a></div>
+                <div class="divs"><a href="https://github.com/Chu-l" target="_blank"><i class="fab fa-github-alt"></i>Chu-l</a></div>
+                <div class="divs"><a href="https://www.linkedin.com/in/chu-l/" target="_blank"><i class="fab fa-linkedin-in"></i>l.i.l.e.n</a></div>
                 <div class="divs"><a href="#"><i class="fas fa-envelope"></i>lilen.chu@hotmail.com</a></div>
             </div>
             <div class="caja2-s5">
