--- a/index.html
+++ b/index.html
@@ -38,13 +38,16 @@
 <!--Sección 1-->
     <section id="hola">
 
+        <div class="div-s1">
         <div class="caja1-s1">
             <h1>¡Hola! Soy <span>Lilen</span></h1>
             <p class="p-s1">Desarrolladora, técnica química, dibujante y amante de los juegos.</p>
             <a href="#proyectos">LO QUE HAGO</a>
         </div>
+
         <div class="caja2-s1">
-            <img class="img-s1" src="imagenes/ditto.png">
+            <img class="img-s1" src="imagenes/portada.svg">
+        </div>
         </div>
 
     </section>
@@ -109,7 +112,7 @@
                 <div class="divs"><a href="https://github.com/Chu-l" target="_blank"><i class="fab fa-github-alt"></i>Chu-l</a></div>
                 <div class="divs"><a href="https://www.linkedin.com/in/chu-l/" target="_blank"><i class="fab fa-linkedin-in"></i>l.i.l.e.n</a></div>
                 <div class="divs"><a href="#"><i class="fas fa-envelope"></i>lilen.chu@hotmail.com</a></div>
-                
+
             </div>
 
             <div class="caja2-s5">
