--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 <!--Principio del Header-->
     <header>
 
-        <nav>
-            <ul class="menu">
-                <li><a href="#hola">HOLA</a></li>
-                <li><a href="#conocimientos">CONOCIMIENTOS</a></li>
-                <li><a href="#proyectos">PROYECTOS</a></li>
-                <li><a class="distinto" href="#contacto">CONTACTO</a></li>
-            </ul>          
+        <nav class="menu">
+            <div class="contenedor-nav">
+                <div class="caja-nav"><a href="#hola">HOLA</a></div>
+                <div class="caja-nav"><a href="#conocimientos">CONOCIMIENTOS</a></div>
+                <div class="caja-nav"><a href="#proyectos">PROYECTOS</a></div>
+                <div class="caja-nav distinto"><a href="#contacto">CONTACTO</a></div>
+            </div>        
         </nav>
 
     </header>
