--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
         <nav class="menu">
             <div class="contenedor-nav">
+                <div class="bordenav"></div>
                 <div class="caja-nav"><a href="#hola">HOLA</a></div>
                 <div class="caja-nav"><a href="#conocimientos">CONOCIMIENTOS</a></div>
                 <div class="caja-nav"><a href="#proyectos">PROYECTOS</a></div>
@@ -71,7 +72,7 @@
     </section>
 
 <!--Sección 3-->
-    <section class="s3">
+    <section id="s3">
 
         <img src="imagenes/comillas3.png" class="comillas">
         <p>Quiero compartir con ustedes el secreto que me ha llevado a alcanzar todas mis metas: mi fuerza reside únicamente en mi tenacidad.</p>
