responsive nav footer section1

--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
 <!--Principio del Footer-->
     <footer>
 
-        <a href="#hola">HOLA</a>
-        <a href="#conocimientos">CONOCIMIENTOS</a>
-        <a href="#proyectos">PROYECTOS</a>
-        <a href="#contacto">CONTACTO</a>   
+        <a class="menu-fot" href="#hola">HOLA</a>
+        <a class="menu-fot" href="#conocimientos">CONOCIMIENTOS</a>
+        <a class="menu-fot" href="#proyectos">PROYECTOS</a>
+        <a class="menu-fot" href="#contacto">CONTACTO</a>   
 
         <ul>
             <li><a href="https://twitter.com/_Lilen_" target="_blank"><i class="fab fa-twitter"></i></a></li>
