section3 y section5 responsivos

--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
 <!--Sección 3-->
     <section id="s3">
 
-        <img src="imagenes/comillas3.png" class="comillas">
-        <p>Quiero compartir con ustedes el secreto que me ha llevado a alcanzar todas mis metas: mi fuerza reside únicamente en mi tenacidad.</p>
-        <p class="louis">Louis Pasteur</p>
+        <div>
+            <img src="imagenes/comillas3.png" class="comillas">
+            <p>Quiero compartir con ustedes el secreto que me ha llevado a alcanzar todas mis metas: mi fuerza reside únicamente en mi tenacidad.</p>
+            <p class="louis">Louis Pasteur</p>
+        </div>
 
     </section>
 
