--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
             <p>A lo largo de mi formación como programadora web frontend he podido realizar distintos proyectos. Para ver más proyectos, te invito a pasar por mi <a href="https://github.com/Chu-l" target="_blank"><span class="github">GitHub</span></a>.</p>
         </div>
         <div class="div2-s4">
-            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/gaming.svg" class="img-s4"><h3>Portfolio</h3></a></div>
-            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/gaming.svg" class="img-s4"><h3>Generador de memes</h3></a></div>
-            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/gaming.svg" class="img-s4"><h3>Match 3</h3></a></div>
-            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/gaming.svg" class="img-s4"><h3>Controlador de gastos</h3></a></div>
-            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/gaming.svg" class="img-s4"><h3>Administrador de reuniones</h3></a></div>
-            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/gaming.svg" class="img-s4"><h3>Todo app</h3></a></div>
-            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/gaming.svg" class="img-s4"><h3>Buscador de películas</h3></a></div>
+            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja1.svg" class="img-s4"><h3>Portfolio</h3></a></div>
+            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja2.svg" class="img-s4"><h3>Generador de memes</h3></a></div>
+            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja3.svg" class="img-s4"><h3>Match 3</h3></a></div>
+            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja4.svg" class="img-s4"><h3>Controlador de gastos</h3></a></div>
+            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja5.svg" class="img-s4"><h3>Administrador de reuniones</h3></a></div>
+            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja6.svg" class="img-s4"><h3>Todo app</h3></a></div>
+            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja7.svg" class="img-s4"><h3>Buscador de películas</h3></a></div>
         </div>
 
     </section>
