--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <section id="proyectos">
         
         <div class="div1">
-            <h2>Mis Proyectos</h2>
+            <h2>Mis proyectos</h2>
             <p>A lo largo de mi formación como programadora web frontend he podido realizar distintos proyectos. Para ver más proyectos, te invito a pasar por mi <a href="https://github.com/Chu-l" target="_blank"><span class="github">GitHub</span></a>.</p>
         </div>
         <div class="div2-s4">
