--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="divs"><a href="https://twitter.com/_Lilen_" target="_blank"><i class="fab fa-twitter"></i>@_Lilen_</a></div>
                 <div class="divs"><a href="https://github.com/Chu-l" target="_blank"><i class="fab fa-github-alt"></i>Chu-l</a></div>
                 <div class="divs"><a href="https://www.linkedin.com/in/chu-l/" target="_blank"><i class="fab fa-linkedin-in"></i>l.i.l.e.n</a></div>
-                <div class="divs"><a href="#"><i class="fas fa-envelope"></i>lilen.chu@hotmail.com</a></div>
+                <div class="divs"><a href="mailto:lilen.chu@hotmail.com"><i class="fas fa-envelope"></i>lilen.chu@hotmail.com</a></div>
 
             </div>
 
@@ -171,7 +171,7 @@
             <li><a href="https://twitter.com/_Lilen_" target="_blank"><i class="fab fa-twitter"></i></a></li>
             <li><a href="https://github.com/Chu-l" target="_blank"><i class="fab fa-github-alt"></i></a></li>
             <li><a href="https://www.linkedin.com/in/chu-l/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-            <li><a href="#"><i class="fas fa-envelope"></i></a></li>
+            <li><a href="mailto:lilen.chu@hotmail.com"><i class="fas fa-envelope"></i></a></li>
         </ul>
 
         <p>Hecho con <img src="imagenes/corazon.png" class="corazon"> por Chull</p>
