--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="div-s1">
         <div class="caja1-s1">
             <h1>¡Hola! Soy <span>Lilen</span></h1>
-            <p class="p-s1">Desarrolladora, técnica química, dibujante y amante de los juegos.</p>
+            <p class="p-s1">Desarrolladora, técnica química, dibujante, pixel artist noob y amante de los juegos.</p>
             <a href="#proyectos">LO QUE HAGO</a>
         </div>
 
@@ -60,6 +60,7 @@
             <br>
             <p>Tengo conocimientos en desarrollo web frontend pero sigo formándome continuamente. También estoy aprendiendo sobre diseño, Photoshop, Adobe Illustrator, Pyxel Edit y otras herramientas.</p>
         </div>
+        
         <div class="div2-s2">
             <div class="caja-s2"><img src="imagenes/html5.svg" class="img-s2"><h2>HTML 5</h2></div>
             <div class="caja-s2"><img src="imagenes/css.svg" class="img-s2"><h2>CSS 3</h2></div>
@@ -174,7 +175,7 @@
             <li><a href="mailto:lilen.chu@hotmail.com"><i class="fas fa-envelope"></i></a></li>
         </ul>
 
-        <p>Hecho con <img src="imagenes/corazon.png" class="corazon"> por Chull</p>
+        <p>Hecho con <img src="imagenes/corazon.gif" class="corazon"> por Chull</p>
 
     </footer>
 <!--Fin del Footer-->
