--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="lilen, chu, portfolio, portafolio, desarrolladora, desarrollo web, chu-l">
-        <meta name="description" content="Portfolio personal de Lilen Chu.">
+        <meta name="description" content="Portfolio personal de Lilen, con sus proyectos y medios de contacto. ">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link href="css/estilo.css" rel="stylesheet">
         <link href="imagenes/icono.png" rel="icon">
@@ -47,7 +47,7 @@
         </div>
 
         <div class="caja2-s1">
-            <img class="img-s1" src="imagenes/portada.svg">
+            <img class="img-s1" src="imagenes/portada.svg" alt="imagen de portada: un pug con café en una notebook">
         </div>
         </div>
 
@@ -62,12 +62,12 @@
         </div>
         
         <div class="div2-s2">
-            <div class="caja-s2"><img src="imagenes/html5.svg" class="img-s2"><h2>HTML 5</h2></div>
-            <div class="caja-s2"><img src="imagenes/css.svg" class="img-s2"><h2>CSS 3</h2></div>
-            <div class="caja-s2"><img src="imagenes/sass.svg" class="img-s2"><h2>Sass</h2></div>
-            <div class="caja-s2"><img src="imagenes/javascript.svg" class="img-s2"><h2>JavaScript</h2></div>
-            <div class="caja-s2"><img src="imagenes/react.svg" class="img-s2"><h2>React</h2></div>
-            <div class="caja-s2"><img src="imagenes/git.svg" class="img-s2"><h2>GIT</h2></div>
+            <div class="caja-s2"><img src="imagenes/html5.svg" class="img-s2" alt="HTML5"><h2>HTML 5</h2></div>
+            <div class="caja-s2"><img src="imagenes/css.svg" class="img-s2" alt="CSS"><h2>CSS 3</h2></div>
+            <div class="caja-s2"><img src="imagenes/sass.svg" class="img-s2" alt="Sass"><h2>Sass</h2></div>
+            <div class="caja-s2"><img src="imagenes/javascript.svg" class="img-s2" alt="JavaScript"><h2>JavaScript</h2></div>
+            <div class="caja-s2"><img src="imagenes/react.svg" class="img-s2" alt="React"><h2>React</h2></div>
+            <div class="caja-s2"><img src="imagenes/git.svg" class="img-s2" alt="GIT"><h2>GIT</h2></div>
         </div>
 
     </section>
@@ -76,7 +76,7 @@
     <section id="s3">
 
         <div>
-            <img src="imagenes/comillas3.png" class="comillas">
+            <img src="imagenes/comillas3.png" class="comillas" alt="comillas">
             <p>Quiero compartir con ustedes el secreto que me ha llevado a alcanzar todas mis metas: mi fuerza reside únicamente en mi tenacidad.</p>
             <p class="louis">Louis Pasteur</p>
         </div>
@@ -91,13 +91,13 @@
             <p>A lo largo de mi formación como programadora web frontend he podido realizar distintos proyectos. Para ver más proyectos, te invito a pasar por mi <a href="https://github.com/Chu-l" target="_blank"><span class="github">GitHub</span></a>.</p>
         </div>
         <div class="div2-s4">
-            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja1.svg" class="img-s4"><h3>Portfolio</h3></a></div>
-            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja2.svg" class="img-s4"><h3>Generador de memes</h3></a></div>
-            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja3.svg" class="img-s4"><h3>Match 3</h3></a></div>
-            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja4.svg" class="img-s4"><h3>Controlador de gastos</h3></a></div>
-            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja5.svg" class="img-s4"><h3>Administrador de reuniones</h3></a></div>
-            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja6.svg" class="img-s4"><h3>Todo app</h3></a></div>
-            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja7.svg" class="img-s4"><h3>Buscador de películas</h3></a></div>
+            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja1.svg" class="img-s4" alt="Imagen descriptiva del portfolio"><h3>Portfolio</h3></a></div>
+            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja2.svg" class="img-s4" alt="Imagen descriptiva de un generador de memes"><h3>Generador de memes</h3></a></div>
+            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja3.svg" class="img-s4" alt="Imagen descriptiva de un juego"><h3>Match 3</h3></a></div>
+            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja4.svg" class="img-s4" alt="Imagen descriptiva del controlador de gastos"><h3>Controlador de gastos</h3></a></div>
+            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja5.svg" class="img-s4" alt="Imagen descriptiva de reuniones"><h3>Administrador de reuniones</h3></a></div>
+            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja6.svg" class="img-s4" alt="Imagen descriptiva de todo app"><h3>Todo app</h3></a></div>
+            <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja7.svg" class="img-s4" alt="Imagen descriptiva de películas"><h3>Buscador de películas</h3></a></div>
         </div>
 
     </section>
@@ -169,10 +169,10 @@
         <a class="menu-fot" href="#contacto">CONTACTO</a>   
 
         <ul>
-            <li><a href="https://twitter.com/_Lilen_" target="_blank"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="https://github.com/Chu-l" target="_blank"><i class="fab fa-github-alt"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/chu-l/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-            <li><a href="mailto:lilen.chu@hotmail.com"><i class="fas fa-envelope"></i></a></li>
+            <li><a href="https://twitter.com/_Lilen_" target="_blank"><i class="fab fa-twitter" aria-label="twitter"></i></a></li>
+            <li><a href="https://github.com/Chu-l" target="_blank"><i class="fab fa-github-alt" aria-label="github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/chu-l/" target="_blank"><i class="fab fa-linkedin-in" aria-label="linkedin"></i></a></li>
+            <li><a href="mailto:lilen.chu@hotmail.com"><i class="fas fa-envelope" aria-label="mail"></i></a></li>
         </ul>
 
         <p>Hecho con <img src="imagenes/corazon.gif" class="corazon"> por Chull</p>
