--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         </div>
 
     </section>
+
 <!--Sección 2-->
     <section id="conocimientos">
         
@@ -60,7 +61,8 @@
             <br>
             <p>Tengo conocimientos en desarrollo web frontend pero sigo formándome continuamente. También estoy aprendiendo sobre diseño, Photoshop, Adobe Illustrator, Pyxel Edit y otras herramientas.</p>
         </div>
-        
+
+<!--Cards de la sección 2-->
         <div class="div2-s2">
             <div class="caja-s2"><img src="imagenes/html5.svg" class="img-s2" alt="HTML5"><h2>HTML 5</h2></div>
             <div class="caja-s2"><img src="imagenes/css.svg" class="img-s2" alt="CSS"><h2>CSS 3</h2></div>
@@ -90,6 +92,8 @@
             <h2>Mis proyectos</h2>
             <p>A lo largo de mi formación como programadora web frontend he podido realizar distintos proyectos. Para ver más proyectos, te invito a pasar por mi <a href="https://github.com/Chu-l" target="_blank"><span class="github">GitHub</span></a>.</p>
         </div>
+
+<!--Cards de la sección 4-->
         <div class="div2-s4">
             <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja1.svg" class="img-s4" alt="Imagen descriptiva del portfolio"><h3>Portfolio</h3></a></div>
             <div class="caja-s4"><a href="#" target="_blank"><img src="imagenes/caja2.svg" class="img-s4" alt="Imagen descriptiva de un generador de memes"><h3>Generador de memes</h3></a></div>
@@ -101,12 +105,13 @@
         </div>
 
     </section>
+
 <!--Sección 5-->
     <section id="contacto">
 
         <div class="div1-s5">
 
-            <div class="caja1-s5">
+            <div class="caja1-s5"> <!--Medios de contacto-->
 
                 <h2 class="tit-s5">Contactame</h2>
 
@@ -119,7 +124,7 @@
 
             </div>
 
-            <div class="caja2-s5">
+            <div class="caja2-s5"> <!--Formulario-->
 
                 <h2 class="tit-s5">Escribime</h2>
 
@@ -162,12 +167,12 @@
 
 <!--Principio del Footer-->
     <footer>
-
+<!--Menú de links-->
         <a class="menu-fot" href="#hola">HOLA</a>
         <a class="menu-fot" href="#conocimientos">CONOCIMIENTOS</a>
         <a class="menu-fot" href="#proyectos">PROYECTOS</a>
         <a class="menu-fot" href="#contacto">CONTACTO</a>   
-
+<!--Menú de iconos-->
         <ul>
             <li><a href="https://twitter.com/_Lilen_" target="_blank"><i class="fab fa-twitter" aria-label="twitter"></i></a></li>
             <li><a href="https://github.com/Chu-l" target="_blank"><i class="fab fa-github-alt" aria-label="github"></i></a></li>
