php del formulario

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
                 <h2 class="tit-s5">Escribime</h2>
 
-                <form action="mailto:lilen.chu@hotmail.com" method="POST" enctype="text/plain">
+                <form action="enviar.php" method="POST" enctype="text/plain">
 
                     <div class="ayn">
                         <p class="p-nom">
