--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 
         <nav class="menu">
             <div class="contenedor-nav">
-                <div class="bordenav"></div>
                 <div class="caja-nav"><a href="#hola">HOLA</a></div>
                 <div class="caja-nav"><a href="#conocimientos">CONOCIMIENTOS</a></div>
                 <div class="caja-nav"><a href="#proyectos">PROYECTOS</a></div>
@@ -42,7 +41,7 @@
         <div class="div-s1">
         <div class="caja1-s1">
             <h1>¡Hola! Soy <span>Lilen</span></h1>
-            <p class="p-s1">Desarrolladora, técnica química, dibujante, pixel artist noob y amante de los juegos.</p>
+            <p class="p-s1">Desarrolladora, técnica química, dibujante, pixel artist en formación y amante de los juegos.</p>
             <a href="#proyectos">LO QUE HAGO</a>
         </div>
 
